--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     }
 
     #submit {
+      margin-top: 10px;
+      text-align: center;
       margin-left: 10px;
     }
   </style>
@@ -31,9 +33,10 @@
 
 <body>
   <div id="content">
-    <h1 id="title">在线报告验证系统</h1>
+    <h2 id="title">在线报告验证系统</h2>
     <div id="body">
       <input type="password" id="myInput" placeholder="请输入报告验证码" />
+      <br />
       <button id="submit" onclick="MsgBox()">提交查询</button>
     </div>
   </div>
